# circularBuffer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  circularBuffer.c  circularBufferStatic.c  circularBufferStatic.h
.github/workflows/: run-googletests.yml  update-version-on-master.yml
circularBufferDynamic/: CMakeLists.txt  circularBufferDynamic.c  circularBufferDynamic.h
circularBufferDynamic/gtests/: CMakeLists.txt  circularBufferDynamicTests.cpp
circularBufferStatic/: CMakeLists.txt  circularBuffer.c  circularBufferStatic.c  circularBufferStatic.h
circularBufferStatic/gtests/: CMakeLists.txt  circularBufferStaticTests.cpp
gtests/: CMakeLists.txt  circularBufferStaticTests.cpp
inc/: circularBuffer.h
